fix(icon): fix the clipboard icon on safari ios
Only happens on iOS. Seems like a newly added default style.
Setting padding to 0 resolves the issue.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -787,6 +787,7 @@ pre {
     mask-image: url("../assets/clippy.svg");
     mask-size: cover;
     width: 1rem;
+    padding: 0;
 
     &:hover,
     &:focus {
